FIx horizontal scroll on small screens.
Has to do with the increased gutter width!

--- a/assets/stylesheets/scss/components/_components.painting.scss
+++ b/assets/stylesheets/scss/components/_components.painting.scss
@@ -34,6 +34,10 @@
 
 .template-work {
 
+	[role="main"] {
+		overflow: hidden;
+	}
+
 	.grid--gutter {
 		margin-right: rhythm(-1.5 * $grid-gutter-rhythm-unit); // Removes the `gutter` right
 		margin-left: rhythm(-1.5 * $grid-gutter-rhythm-unit); // Removes the `gutter` right
